# llm-ai-investment-analysis

./: .gitignore  README.md  pyproject.toml
scripts/: runner.py
src/chapter_03/: __init__.py
src/chapter_03/3.2.7_environment_variables/: main.py
src/chapter_03/3.3.1_apple_analysis_raw/: main.py
src/chapter_03/3.4.2_langchain_implementation/: main.py
src/chapter_04/: __init__.py
src/chapter_04/4.1.1_temperature_consistency/: main.py
src/chapter_04/4.2.5_role_based_prompting/: main.py
src/chapter_04/4.3.3_few_shot_implementation/: main.py
src/chapter_04/4.4.2_prompt_template_usage/: main.py
src/chapter_04/4.5.1_structured_output_parser/: main.py
src/chapter_04/4.6.1_business_report_system/: main.py
src/chapter_05/: __init__.py
src/chapter_05/5.1.1_llm_limitations/: main.py
src/chapter_05/5.1.1_yahoo_finance_analysis/: main.py
src/chapter_05/5.1.2_sec_data_analysis/: main.py
src/chapter_05/5.2.1_sec_edgar_analysis/: main.py
src/chapter_05/5.2.1_sequential_chain/: main.py
src/chapter_05/5.3.1_google_news_analysis/: main.py
src/chapter_05/5.3.1_yahoo_finance_integration/: README.md  enhanced_sec_collector.py  main.py  test_enhanced_sec.py
src/chapter_05/5.4.1_ai_keyword_recommendation/: main.py
src/chapter_05/5.4.1_comprehensive_analysis/: google_news_analyzer.py  main.py  sec_edgar_analyzer.py  yahoo_finance_analyzer.py
src/chapter_05/5.5.1_comprehensive_system/: main.py
src/chapter_06/: __init__.py
src/chapter_07/: __init__.py
src/chapter_08/: __init__.py
src/chapter_09/: __init__.py
(+18 files in other folders)
